# nova-pydrobox

./: .coverage.Liams-MacBook-Pro.local.61016.XOrOwHWx  .env.example  .gitignore  LICENSE  README.md  architecture.md  demo.py  dropbox_auth.py  dropbox_operations.py  list_files.py  pyproject.toml  pytest.ini  spec.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codecov.yml  dependencies.yml
examples/: quickstart.ipynb
nova_pydrobox/: __init__.py  cli.py  config.py  constants.py  exceptions.py  types.py
nova_pydrobox/auth/: __init__.py  authenticator.py  token_storage.py
nova_pydrobox/operations/: __init__.py  base.py  files.py  folders.py
nova_pydrobox/utils/: __init__.py  progress.py
tests/: conftest.py  test_cli.py  test_config.py
tests/auth/: test_authenticator.py  test_token_storage.py
tests/e2e/: README.md  __init__.py  conftest.py  test_auth_flow_e2e.py  test_cli_e2e.py  test_files_e2e.py  test_folders_e2e.py  test_performance_e2e.py
tests/e2e/utils/: __init__.py  test_auth.py
tests/operations/: test_base.py  test_files.py  test_folders.py
tests/utils/: test_progress.py
