[project]
name = "nova-pydrobox"
version = "0.1.0"
description = ""
authors = [
    {name = "Liam Swanepoel",email = "lswanepoel0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dropbox (>=12.0.2,<13.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pendulum (>=3.0.0,<4.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "secretstorage (>=3.3.3,<4.0.0)",
    "keyrings-alt (>=5.0.2,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-tqdm = "^4.67.0.20241221"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
ipython = "^8.32.0"
ipdb = "^0.13.13"
requests-mock = "^1.12.1"

