[project]
name = "nova-pydrobox"
version = "0.1.0"
description = "A Python CLI tool for interacting with Dropbox"
authors = [
    {name = "Liam Swanepoel",email = "lswanepoel0@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dropbox (>=12.0.2,<13.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "secretstorage (>=3.3.3,<4.0.0)",
    "keyrings-alt (>=5.0.2,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-tqdm = "^4.67.0.20241221"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
ipython = "^8.32.0"
ipdb = "^0.13.13"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.25.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[tool.coverage.run]
source = ["nova_pydrobox"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]