[project]
name = "nova-pydrobox"
version = "0.1.0"
description = "A Python CLI tool for interacting with Dropbox"
authors = [
    {name = "Liam Swanepoel",email = "lswanepoel0@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
name = "nova-pydrobox"
version = "0.1.0"
description = "A Python CLI tool for interacting with Dropbox"
authors = ["Liam Swanepoel <lswanepoel0@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
dropbox = ">=12.0.2,<13.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
keyring = ">=25.6.0,<26.0.0"
cryptography = ">=44.0.0,<45.0.0"
secretstorage = ">=3.3.3,<4.0.0"
keyrings-alt = ">=5.0.2,<6.0.0"
pandas = ">=2.2.3,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
click = ">=8.1.8,<9.0.0"
rich = ">=13.9.4,<14.0.0"
jupyter = ">=1.1.1,<2.0.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-tqdm = "^4.67.0.20241221"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
ipython = "^8.32.0"
ipdb = "^0.13.13"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.25.3"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"

[tool.coverage.run]
branch = true
source = ["nova_pydrobox"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]